Fix all spacing issues

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -6,7 +6,8 @@ body{
   margin: 0 auto;
   text-align: center;
   width: 650px;
-  font-family: 'Abel';font-size: 22px;
+  font-family: 'Abel';
+  font-size: 22px;
 }
 
 .image img{
